# pbarker.dev

./: .gitignore  .pre-commit-config.yaml  MAINTAINERS  README.md  pelicanconf.py  poetry.lock.license  publishconf.py  pyproject.toml  requirements.txt  tailwind.config.js  tasks.py
.github/workflows/: ci.yml
content/: favicon.ico.license  pgpkeys.asc  sshkeys.txt  sshkeys.txt.asc  sshkeys.txt.license
content/css/: local.css  youtube.css
content/images/: 1280px-O2_Wireless_Box_IV.jpg.license  malham_2021-05.jpg.license  pbarker.jpg.license
content/pages/: 404.rst  license.rst  meta.rst
content/posts/: 2012-07-02-udaq.rst  2012-10-19-o2-wireless-box.rst  2012-12-05-udaq.rst  2013-05-13-impulsive-underwater-noise.rst  2014-02-02-fosdem-talk.rst  2017-10-26-license-compliance-talk.rst  2018-10-25-licensing-2.rst  2019-10-30-license-compliance-yocto.rst  2019-10-31-creating-friendly-layers.rst  2020-07-02-yocto-build-automation.rst  2020-07-12-goals-and-rationale.rst  2020-09-23-license-compliance-yocto.rst  2020-10-29-yocto-rust.rst  2020-11-05-using-rust-with-yocto.rst  2021-02-06-introducing-openembedded.rst  2021-02-07-license-compliance.rst  2021-03-17-license-compliance-agl.rst  2021-06-05-mental-health-update.rst  2021-06-22-rebooting-meta-linux-mainline.rst  2021-12-01-hash-equivalence.rst  2021-12-01-yocto-lore.rst  2022-02-15-mirrorshades-0.2.0.rst  2022-12-01-creating-friendly-layers.rst  2023-02-07-content-licensing.rst  2023-04-10-syndication.rst  (+13 more)
css/: base.scss  local.css  main.scss  tailwind.scss
photography/: 2024-12-29-magpie.rst  preprocess.py
(+7 files in other folders)
